--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 config/__pycache__
 bots/__pycache__
 scripts/__pycache__
+scripts/Networking.py
 test/__pycache__
 ui/__pycache__
 ui/Animations/__pycache__
